--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
