--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.75.3",
     "react-native-alert-notification": "^0.4.0",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
